@@ -1,3 +1,7 @@
+2012-01-19  Ramon Novoa  <rnovoa@artica.es>
+
+	* modules/pandora_module_odbc.cc: Check for NULL pointers.
+
 2012-01-04  Ramon Novoa  <rnovoa@artica.es>
 
 	* modules/pandora_module.cc: Fixed an error when checking multiple
